# moq-prototype

./: Cargo.toml  build.rs  flake.nix  justfile
.certs/: localhost.crt  localhost.key
crates/rpcmoq_lite/: Cargo.toml
crates/rpcmoq_lite/src/: connection.rs  error.rs  lib.rs  path.rs
crates/rpcmoq_lite/src/client/: connection.rs  rpc_client.rs
crates/rpcmoq_lite/src/server/: handler.rs  mod.rs  router.rs  session.rs
dev/: relay.toml
proto/: drone.proto  telemetry.proto
src/: lib.rs
src/grpc/: mod.rs  server.rs
src/rpcmoq_lite/: connection.rs  error.rs  handler.rs  mod.rs  path.rs  router.rs
src/rpcmoq_lite/client/: client.rs  config.rs  connection.rs  mod.rs  rpc_client.rs
src/rpcmoq_lite/server/: config.rs  handler.rs  router.rs  session.rs
src/state_machine/: echo.rs
