[package]
name = "rpcmoq_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bon = "3.8.2"
bytes = "1.11.0"
dashmap = "6.1.0"
futures = "0.3.31"
moq-lite = "0.12.0"
prost = "0.14.3"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tracing = "0.1.44"
ahash = "0.8.12"
